# mordern-python-tdd-blog-app

./: .gitignore  README.md  pyproject.toml
blog/: app.py  init_db.py  models.py  queries.py
tests/: conftest.py  pytest.ini
tests/test_article/: test_app.py  test_commands.py  test_queries.py
tests/test_article/schemas/: Article.json  ArticleList.json
