[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Kada Liao <kadaliao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pydantic = {extras = ["email"], version = "^1.8.2"}
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
